--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-	"name": "Feedelity",
-	"version": "0.0.1",
-	"private": true,
-	"dependencies": {
-    	"express": "~3.2.6",
-		"jade": "~0.31.2",
-		"feedparser": "~0.16.6",
-		"request": "~2.34.0",
-		"async": "~0.2.10",
-        "mongoose": "~3.8.8"
-	}
+  "name": "Feedelity",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {
+    "express": "~3.2.6",
+    "jade": "~0.31.2",
+    "feedparser": "~0.16.6",
+    "request": "~2.34.0",
+    "async": "~0.2.10",
+    "mongoose": "~3.8.8",
+    "q": "~1.0.0"
+  }
 }
